--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ a{
   .column {
     width: 50%;
   }
+  .titlelogo{
+  width:100%;
+}
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
