--- a/style_about.css
+++ b/style_about.css
@@ -84,6 +84,9 @@ h3{
   .container {
     width: 50%;
   }
+  .titlelogo{
+  width:100%;
+}
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
