--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@ body{
 }
 
 p{
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
 }
 
 h3{
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
 }
 
 a{
@@ -34,7 +34,8 @@ a{
   position:absolute;
   right:20px;
   top:20px;
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
+  font-weight: 700;
   text-decoration: none;
   color:black;
 }
@@ -43,13 +44,15 @@ a{
   display:block;
   text-align: center;
   text-decoration: none;
+  font-weight: 700;
   color:black;
 }
 .flawer{
   position:absolute;
   left:20px;
   top:20px;
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
+  font-weight: 700;
   text-decoration: none;
   color:black;
 }
@@ -58,6 +61,7 @@ a{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  font-weight: 700;
   width:40%;
 }
 
