--- a/style_about.css
+++ b/style_about.css
@@ -7,11 +7,11 @@ body{
 }
 
 p{
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
 }
 
 h3{
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
 }
 
 .leader{
@@ -24,7 +24,8 @@ h3{
   position:absolute;
   right:20px;
   top:20px;
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
+  font-weight: 700;
   text-decoration: none;
   color:black;
 }
@@ -32,6 +33,8 @@ h3{
 .center_page{
   display:block;
   text-align: center;
+  font-family: 'Noto Serif SC', serif;
+  font-weight: 700;
   text-decoration: none;
   color:black;
 }
@@ -39,7 +42,8 @@ h3{
   position:absolute;
   left:20px;
   top:20px;
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: 'Noto Serif SC', serif;
+  font-weight: 700;
   text-decoration: none;
   color:black;
 }
@@ -65,10 +69,13 @@ h3{
 
 .big{
   font-weight: 500;
+  font-size: 1.26rem;
 }
 .text{
   font-size: 0.8rem;
   font-style:italic;
+  font-family: 'Lora', serif;
+  font-weight: 500;
 }
 
 .code{
@@ -76,8 +83,13 @@ h3{
 }
 
 .english{
-  font-size: 0.9rem;
-  color:rgb(119, 119, 119);
+  font-family: 'Lora', serif;
+  font-size: 1.16rem;
+  color:rgb(68, 68, 68);
+}
+
+.chinese{
+  font-size: 1.1rem;
 }
 
 @media screen and (max-width: 700px) {
@@ -96,5 +108,7 @@ h3{
   }
 
 a{
+  text-decoration: none;
+  font-weight: 400;
   color: black;
 }
