--- a/style_about.css
+++ b/style_about.css
@@ -30,14 +30,22 @@ h3{
   color:black;
 }
 
+.about:hover{
+  color:rgb(255, 75, 27);
+}
+
 .center_page{
   display:block;
   text-align: center;
-  font-family: 'Noto Serif SC', serif;
-  font-weight: 700;
   text-decoration: none;
+  font-weight: 700;
   color:black;
 }
+
+.center_page:hover{
+  color:rgb(255, 75, 27);
+}
+
 .flawer{
   position:absolute;
   left:20px;
@@ -46,6 +54,10 @@ h3{
   font-weight: 700;
   text-decoration: none;
   color:black;
+}
+
+.flawer:hover{
+  color:rgb(255, 75, 27);
 }
 
 .titlelogo{
