--- a/style-project.css
+++ b/style-project.css
@@ -18,10 +18,17 @@ h3{
   text-decoration:underline;
   color:black;
 }
+
 .leader{
   display:block;
-  height:30px;
-  width:auto;
+  /* height:30px; */
+  width:100%;
+  position:fixed;
+  top:0;
+  left:0;
+  background-color: white;
+  z-index:99;
+  border-bottom:1px rgb(218, 218, 218) solid;
 }
 
 .about{
