--- a/style_about.css
+++ b/style_about.css
@@ -16,8 +16,14 @@ h3{
 
 .leader{
   display:block;
-  height:30px;
-  width:auto;
+  /* height:30px; */
+  width:100%;
+  position:fixed;
+  top:0;
+  left:0;
+  background-color: white;
+  z-index:99;
+  border-bottom:1px rgb(218, 218, 218) solid;
 }
 
 .about{
