--- a/style-project.css
+++ b/style-project.css
@@ -31,10 +31,16 @@ h3{
   border-bottom:1px rgb(218, 218, 218) solid;
 }
 
+/* .content{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+} */
+
 .about{
   position:absolute;
-  right:20px;
-  top:20px;
+  right:10px;
+  top:16px;
   font-family: 'Noto Serif SC', serif;
   font-weight: 700;
   text-decoration: none;
@@ -59,8 +65,9 @@ h3{
 
 .flawer{
   position:absolute;
-  left:20px;
-  top:20px;
+  /* left:20px; */
+  left:10px;
+  top:16px;
   font-family: 'Noto Serif SC', serif;
   font-weight: 700;
   text-decoration: none;
