--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ a{
 
 .about{
   position:absolute;
-  right:20px;
-  top:20px;
+  right:10px;
+  top:16px;
   font-family: 'Noto Serif SC', serif;
   font-weight: 700;
   text-decoration: none;
@@ -65,8 +65,9 @@ a{
 
 .flawer{
   position:absolute;
-  left:20px;
-  top:20px;
+  /* left:20px; */
+  left:10px;
+  top:16px;
   font-family: 'Noto Serif SC', serif;
   font-weight: 700;
   text-decoration: none;
