--- a/style-project.css
+++ b/style-project.css
@@ -175,6 +175,10 @@ h3{
   font-weight: 300;
 }
 
+.huayiwenxin{
+  width:60%;
+}
+
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 900px) {
   .column {
