--- a/style_about.css
+++ b/style_about.css
@@ -118,6 +118,11 @@ h3{
   font-weight: 400;
 }
 
+.link{
+  text-decoration:underline;
+  color:black;
+}
+
 @media screen and (max-width: 700px) {
   .container {
     width: 50%;
