--- a/style.css
+++ b/style.css
@@ -149,6 +149,9 @@ a{
   .homepage{
     width:100%;
   }
+  .leader{
+    width:100%;
+  }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@@ -160,6 +163,9 @@ a{
     width:100%;
   }
   .homepage{
+    width:100%;
+  }
+  .leader{
     width:100%;
   }
 }
