--- a/style-project.css
+++ b/style-project.css
@@ -82,6 +82,13 @@ h3{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width:80%;
+}
+
+.titlepic{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width:100%;
 }
 
@@ -90,7 +97,7 @@ h3{
   flex-wrap: wrap;
   flex-direction: column;
   align-items:center;
-  width:50%;
+  width:40%;
   overflow-x: hidden;
   margin-left: auto;
   margin-right: auto;
