--- a/style.css
+++ b/style.css
@@ -19,11 +19,24 @@ a{
   color:black;
 }
 
+hr{
+  border: 1px dotted rgb(140, 140, 140);
+}
+
+.chinese{
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+
+.mySlides {
+  display:none;
+}
+
 .homepage{
   display:block;
   margin-left: auto;
   margin-right: auto;
-  width:60%;
+  width:30%;
 }
 
 .text{
@@ -152,6 +165,12 @@ a{
   .leader{
     width:100%;
   }
+  .mySlides{
+    width:100%;
+  }
+  .chinese{
+    width:100%;
+  }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@@ -166,6 +185,12 @@ a{
     width:100%;
   }
   .leader{
+    width:100%;
+  }
+  .mySlides{
+    width:100%;
+  }
+  .chinese{
     width:100%;
   }
 }
